Creo el formulario reactivo de productos

--- a/src/app/products/product-add/product-add.component.html
+++ b/src/app/products/product-add/product-add.component.html
@@ -1,1 +1,29 @@
-<p>product-add works!</p>
+<mat-card>
+  <mat-card-title>Add new Product</mat-card-title>
+  <img mat-card-image src="">
+
+  <mat-card-content>
+    <form [formGroup]="form">
+      <mat-form-field>
+        <input type="text" matInput placeholder="Title" formControlName="title">
+      </mat-form-field>
+      <mat-form-field>
+        <input type="text" matInput placeholder="Brand" formControlName="brand">
+      </mat-form-field>
+      <mat-form-field>
+        <input type="text" matInput placeholder="Price" formControlName="price">
+      </mat-form-field>
+      <mat-form-field>
+        <input type="text" matInput placeholder="Sale Price" formControlName="salePrice">
+      </mat-form-field>
+      <mat-form-field>
+        <input type="text" matInput placeholder="Thumb Image URL" formControlName="thumImage">
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+
+  <mat-card-actions>
+    <button mat-raised-button color="primary">Add</button>
+    <button mat-raised-button>Cancel</button>
+  </mat-card-actions>
+</mat-card>
