--- a/src/app/products/lista-productos/lista-productos.component.html
+++ b/src/app/products/lista-productos/lista-productos.component.html
@@ -9,7 +9,7 @@
       <p> {{product.price | currency}}</p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button >Edit</button>
+      <button mat-button [routerLink]="['/productos', 'edit',product.id]">Edit</button>
       <button mat-button >Delete</button>
     </mat-card-actions>
   </mat-card>
