--- a/src/app/products/lista-productos/lista-productos.component.html
+++ b/src/app/products/lista-productos/lista-productos.component.html
@@ -10,7 +10,7 @@
     </mat-card-content>
     <mat-card-actions>
       <button mat-button [routerLink]="['/productos', 'edit',product.id]">Edit</button>
-      <button mat-button >Delete</button>
+      <button mat-button (click)="delete(product)">Delete</button>
     </mat-card-actions>
   </mat-card>
 </div>
