--- a/src/app/products/product-add/product-add.component.html
+++ b/src/app/products/product-add/product-add.component.html
@@ -1,29 +1,5 @@
-<mat-card>
-  <mat-card-title>Add new Product</mat-card-title>
-  <img mat-card-image [src]="form.value.thumbImage">
-
-  <mat-card-content>
-    <form [formGroup]="form">
-      <mat-form-field>
-        <input type="text" matInput placeholder="Title" formControlName="title">
-      </mat-form-field>
-      <mat-form-field>
-        <input type="text" matInput placeholder="Brand" formControlName="brand">
-      </mat-form-field>
-      <mat-form-field>
-        <input type="text" matInput placeholder="Price" formControlName="price">
-      </mat-form-field>
-      <mat-form-field>
-        <input type="text" matInput placeholder="Sale Price" formControlName="salePrice">
-      </mat-form-field>
-      <mat-form-field>
-        <input type="text" matInput placeholder="Thumb Image URL" formControlName="thumbImage">
-      </mat-form-field>
-    </form>
-  </mat-card-content>
-
-  <mat-card-actions>
-    <button (click)="submit()" mat-raised-button color="primary">Add</button>
-    <button mat-raised-button (click)="cancel()">Cancel</button>
-  </mat-card-actions>
-</mat-card>
+<ed-product-form title="Añade un nuevo proyecto"
+                labelSubmit="Add"
+                (submit)="submit($event)"
+                (cancel)="cancel()">
+</ed-product-form>
