--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -1,27 +1,8 @@
-<mat-card>
-  <mat-card-title>Edit Product</mat-card-title>
-  <img mat-card-image [src]="form.value.thumbImage">
+<ed-product-form title= "Edita el producto"
+                labelSubmit="Edit"
+                [model] = "product"
+                (submit) = "submit()"
+                (cancel) ="cancel()"
+     >
 
-  <mat-card-content>
-    <form [formGroup]="form">
-      <mat-form-field>
-        <input type="text" matInput placeholder="Title" formControlName="title">
-      </mat-form-field>
-      <mat-form-field>
-        <input type="text" matInput placeholder="Brand" formControlName="brand">
-      </mat-form-field>
-      <mat-form-field>
-        <input type="text" matInput placeholder="Price" formControlName="price">
-      </mat-form-field>
-      <mat-form-field>
-        <input type="text" matInput placeholder="Sale Price" formControlName="salePrice">
-      </mat-form-field>
-      <mat-form-field>
-        <input type="text" matInput placeholder="Thumb Image URL" formControlName="thumbImage">
-      </mat-form-field>
-    </form>
-  </mat-card-content>
-  <mat-card-actions>
-    <button (click)="submit()" mat-raised-button color="primary">Edit</button>
-    <button mat-raised-button (click)="cancel()">Cancel</button>
-  </mat-card-actions>
+</ed-product-form>
