--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,12 +1,17 @@
-<mat-toolbar color="primary">
-  <span>Tienda online - Angular</span>
-  <span class="toolbar-space"></span>
 
-  <button mat-button [matMenuTriggerFor]="menu">
-    <mat-icon>more_vert</mat-icon>
-  </button>
+<div class="toolbar-class">
+  <mat-toolbar color="primary">
+    <span>Tienda online - Angular</span>
+    <span class="toolbar-space"></span>
 
-  <mat-menu #menu>
-    <button mat-menu-item (click)="add()" >Add Product</button>
-  </mat-menu>
-</mat-toolbar>
+    <button mat-button [matMenuTriggerFor]="menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+
+    <mat-menu #menu>
+      <button mat-menu-item (click)="add()" >Add Product</button>
+    </mat-menu>
+  </mat-toolbar>
+
+
+</div>
