Añado la configuración de la barra de progreso

--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,6 +1,7 @@
 
 <div class="toolbar-class">
-  <mat-toolbar color="primary">
+  <mat-toolbar color="primary" class="toolbar">
+
     <span>Tienda online - Angular</span>
     <span class="toolbar-space"></span>
 
